# railway-bun-node-compare

./: README.md  benchmark-results-2025-07-31T07-26-43-027Z.json  benchmark-results-2025-07-31T07-36-09-279Z.json  benchmark-runner.js  load-test-results-2025-07-31T07-40-02-796Z.json  load-tester.js
bun-implementation/: .env.example  Dockerfile  bun.lockb  package.json  test-benchmark.js  test-db.js
bun-implementation/src/: server.js
bun-implementation/src/database/: connection.js  migrations.js  seeds.js
bun-implementation/src/middleware/: performance-monitor.js
bun-implementation/src/public/: benchmark.html
bun-implementation/src/routes/: authors.js  books.js  orders.js  performance.js  search.js  system.js
node-implementation/: .env.example  Dockerfile  package-lock.json  package.json
node-implementation/src/: server.js
node-implementation/src/database/: connection.js  migrations.js  seeds.js  seeds.sql
node-implementation/src/middleware/: error-handler.js  performance-monitor.js
node-implementation/src/routes/: authors.js  books.js  orders.js  performance.js  search.js  (+1 more)
oha-streaming-service/: .dockerignore  Cargo.toml  Dockerfile  README.md  railway.toml
oha-streaming-service/src/: load_tester.rs  main.rs
shared/components/: BookDetail.jsx  BookList.jsx  PerformanceDashboard.jsx  SearchInterface.jsx
shared/database/: schema.sql
shared/public/: styles.css
web-load-tester/: Dockerfile  README.md  package-lock.json  package.json  server.js  server.js.backup  test-streaming.js
web-load-tester/public/: enhanced-stats.html  index.html
